syntax = "proto3";

message requestOP{
  int32 cid = 1;
  int32 qid = 2;
  string op = 3;
  string table_name = 4;
  string column_name = 5;
}

message responseEncResult {
  bytes encResult= 1;
}


service DatabaseServerService {
  rpc QueryOperation(requestOP) returns(responseEncResult);
  rpc NoiseQueryOperation(requestOP) returns(responseEncResult);
}